исправить ошибки, добавить аннотации для валидации